force-app/main/default/objects/Custom_Report__mdt/Custom_Report__mdt.object-meta.xml
<CustomObject>
    <label>Custom Report</label>
    <pluralLabel>Custom Reports</pluralLabel>
</CustomObject>