force-app/main/default/objects/Custom_Report__mdt/fields/Chunks_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Chunks_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chunks Enabled</label>
    <type>Checkbox</type>
</CustomField>