force-app/main/default/objects/Custom_Report__mdt/fields/Index_Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Index_Field_Api_Name__c</fullName>
    <label>Index Field Api Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>