force-app/main/default/objects/Custom_Report__mdt/fields/Page_Size__c.field-meta.xml
<CustomField>
    <fullName>Page_Size__c</fullName>
    <label>Page Size</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>